<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.merabills.viewmodels.MainViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/_10">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total_amount"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@android:color/darker_gray" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10"
                android:text="@{Float.toString(viewModel._totalAmount)}"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                tools:text="150" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10"
            android:layout_marginBottom="@dimen/_10"
            android:orientation="vertical"
            android:visibility="@{viewModel.payments.size()==0?View.GONE:View.VISIBLE}">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/payments"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

            <androidx.recyclerview.widget.RecyclerView
                removeListener="@{viewModel}"
                setAdapter="@{viewModel.paymentViewModels}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="@{viewModel.openAddPaymentDialog}"
            android:paddingStart="@dimen/_5"
            android:paddingEnd="@dimen/_5"
            android:text="@string/add_payment"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/purple_500" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_10"
            android:onClick="@{viewModel.save}"
            android:text="@string/save" />
    </LinearLayout>
</layout>